Video card and input overflow bug testing

--- a/src/scenes/Bank/Bank.css
+++ b/src/scenes/Bank/Bank.css
@@ -1,4 +1,5 @@
 .Bank {
+  margin-top: 2%;
   margin-left: 10%;
   width: 80%;
 }
