--- a/src/scenes/Bank/components/InputBank/InputBank.css
+++ b/src/scenes/Bank/components/InputBank/InputBank.css
@@ -1,6 +1,6 @@
 .FieldInputBank {
   display: table-cell;
-  overflow: hidden;
+  overflow: visible;
   vertical-align: top;
   width: 100%;
 }
